# Sonora

./: .gitignore  Cargo.toml  Outline.txt  Progress Checkpoint 1.txt  future features.txt
src/: main.rs
src/core/: library.rs  mod.rs  tags.rs  types.rs
src/core/playback/: decoder.rs  engine.rs  mod.rs
src/core/tags/: art.rs  mod.rs  read.rs  util.rs  write.rs
src/gui/: mod.rs  state.rs  subscription.rs  update.rs  util.rs  view.rs
src/gui/update/: helpers.rs  inspector.rs  mod.rs  playback.rs  roots.rs  save.rs  scan.rs  selection.rs  util.rs
src/gui/view/: albums.rs  center.rs  constants.rs  inspector.rs  mod.rs  sidebar.rs  tracks.rs  widgets.rs
